--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 		<version>3.0.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.design</groupId>
-	<artifactId>patterns</artifactId>
+	<groupId>com.mylearnings</groupId>
+	<artifactId>MyLearnings</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>patterns</name>
 	<description>Demo project for Design Patterns</description>
