--- a/pom.xml
+++ b/pom.xml
@@ -12,24 +12,19 @@
 	<artifactId>MyLearnings</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>patterns</name>
-	<description>Demo project for Design Patterns</description>
+	<description>Demo project for Java Learnings</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
